--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.0-beta05'
+        classpath 'com.android.tools.build:gradle:8.0.0-alpha09'
         
 
         // NOTE: Do not place your application dependencies here; they belong
